fet(frontend): hook frontend to api updates
