# bin/routes/v1.js
@@ -15,20 +15,14 @@ router.get("/topics", ctx => {
 router.post("/topics/create", ctx => {
     const newTopic = new models_1.Topic(ctx.request.body.text, ctx.request.body.username);
     ctx.store.insertItem(newTopic);
-    ctx.body = Object.assign({
-        success: true,
-        message: "Topic successfully created"
-    }, newTopic);
+    ctx.body = ctx.store.getSlice(0, 20);
 });
 router.post("/topics/:id/vote", ctx => {
     const id = ctx.params.id;
     const action = ctx.request.body.action;
     let topic = ctx.store.updateItemById(id, action);
     if (topic) {
-        ctx.body = Object.assign({
-            success: true,
-            message: "Topic successfully updated"
-        }, topic);
+        ctx.body = ctx.store.getSlice(0, 20);
     }
     else {
         throw new Error("ID not found");
